--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="trip_count">tcount</string>
     <string name="trips_array">tarray</string>
     <string name="title_activity_maps">Maps</string>
+    <string name="radio_sub_text">Downloading the map for destination area enables you to use maps offline.</string>
 
 
 </resources>
