completed NEW TRIP design and added new recyclerview for upcoming trips

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="trips_array">tarray</string>
     <string name="title_activity_maps">Maps</string>
     <string name="radio_sub_text">Downloading the map for destination area enables you to use maps offline.</string>
+    <string name="download_map_for">Downloading the maps for destination area enables you to use maps offline</string>
 
 
 </resources>
